Fix font size on mobile device

--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -62,3 +62,7 @@
 .activity-list {
   padding-right: 25px;
 }
+
+.info-career-description {
+  font-size: 85%;
+}
